 cmake_minimum_required(VERSION 2.6)
 # project(Testings)
ENABLE_TESTING()
set(BUILD_SHARED_LIBS ON)
find_package( Boost "1.46.1" COMPONENTS unit_test_framework filesystem system REQUIRED)
add_executable(test_thermo_class test_thermo.cpp  MppTestFixture.h)					
target_link_libraries( test_thermo_class   mutation++ ${Boost_LIBRARIES} )  
add_test(NAME test_thermo_class  COMMAND $<TARGET_FILE:test_thermo_class> )
